# cookie

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.planning/: DESIGN.md
config/: default.yaml
mobile/: STATE.md  app.json  character_board.html  package-lock.json  package.json
mobile/app/: _layout.tsx  chat.tsx  expressions.tsx  index.tsx  settings.tsx
mobile/app/history/: [id].tsx  index.tsx
mobile/scripts/: extract_schema.ts
mobile/src/characters/: CHARACTERS.md  protocol.ts  registry.ts
mobile/src/components/: CameraIndicator.tsx  CheckpointLog.tsx  CookingPanel.tsx  CropModal.tsx  CurrentStep.tsx  DiscoveryPanel.tsx  DonePanel.tsx  VoiceOrb.tsx
mobile/src/hooks/: useAudio.ts  useCamera.ts  useSpeech.ts  useWebSocket.ts
mobile/src/services/: envelope.ts  frameSampler.ts  sessionDb.ts  sessionStore.ts  websocket.ts
mobile/src/stores/: session.ts
mobile/src/types/: protocol.ts
scripts/: simulate.py
src/cookie/: __init__.py  config.py  history.py  models.py  server.py
src/cookie/edge/: audio_capture.py  audio_capture.py.bkp  client.py  client.py.bkp  frame_sampler.py.bkp
src/cookie/harness/: runner.py
src/cookie/inference/: cooking.py  cooking.py.bkp  cooking_agent.py  discovery.py  discovery.py.bkp  modules.py  recipe_generator.py  tools.py  worker.py
src/cookie/knowledge/: recipes.py  recipes.py.bkp  safety.py
src/cookie/perception/: audio.py  audio.py.bkp  base.py  engine.py  scene.py
tests/: test_e2e_cooking.py  test_frame_sampler.py  test_models.py  test_safety.py  test_state_manager.py.bkp
(+26 files in other folders)
